// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurrencyField /> should render properly: [object Object] 1`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField0"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="$00,000,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 2`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField2"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField2"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="£00,000,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 3`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField4"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField4"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="€00,000,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 4`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField6"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField6"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="AED00,000,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 5`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField8"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField8"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="CAD00,000,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 6`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField10"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField10"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="00.000.000,00 €"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 7`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField12"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField12"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="00.000.000,00 €"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 8`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField14"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField14"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="₹ 00,00,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;

exports[`<CurrencyField /> should render properly: [object Object] 9`] = `
<div>
  <div
    className="ms-Fabric css-32"
  >
    <div
      className="ms-TextField root"
    >
      <div
        className="ms-TextField-wrapper wrapper"
      >
        <label
          className="ms-Label root-33"
          htmlFor="TextField16"
        >
          Currency Field
        </label>
        <div
          className="ms-TextField-fieldGroup fieldGroup"
        >
          <input
            aria-describedby={null}
            aria-invalid={false}
            aria-label={undefined}
            className="ms-TextField-field field input "
            disabled={false}
            id="TextField16"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="£00,000,000.00"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <input
    name={undefined}
    required={undefined}
    type="hidden"
    value={undefined}
  />
</div>
`;
